--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -13,10 +13,21 @@
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
-        / / background-image: url("https://api.isoyu.com/bing_images.php");
+            /*background-image: url("https://api.isoyu.com/bing_images.php");*/
             background-color: #efefef;
         }
-
+        a {
+            text-decoration: none;
+        }
+        a:hover{
+            text-decoration: none;
+        }
+        .list-group-a {
+            color: black;
+        }
+        .list-group-a:hover{
+            color: #175199;
+        }
         .issue-right {
             border-right-style: solid;
             border-right-width: 1px;
@@ -180,30 +191,42 @@
                 <div class="row" style="text-align: center;">
                     <br/>
                     <div class="col mt-4">
-                        <p>关注了</p>
-                        <div class="card-body mb-2">
-                            <h5>100</h5>
-                        </div>
+                        <a th:href="'/user/'+${user.getUserId()} + '/following/user#user'">
+                            <p>关注了</p>
+                            <div class="card-body mb-2">
+                                <h5 th:text="${user.followCount}">100</h5>
+                            </div>
+                        </a>
                     </div>
                     <div class="col mt-4">
-                        <p>关注者</p>
-                        <div class="card-body mb-2">
-                            <h5>100</h5>
-                        </div>
+                        <a th:href="'/user/'+${user.getUserId()} + '/following/fans#fans'">
+                            <p>关注者</p>
+                            <div class="card-body mb-2">
+                                <h5 th:text="${user.fansCount}">100</h5>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
             <br/>
             <div class="container shadow-sm" style="background-color: white;">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">关注的问题</li>
-                    <li class="list-group-item">关注的话题</li>
+                    <li class="list-group-item">
+                        <a class="list-group-a" th:href="${'/user/' + user.userId}">动态</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/questions'}">关注的问题</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/topic'}">关注的话题</a>
+                    </li>
                     <li class="list-group-item">最新回复</li>
                     <li class="list-group-item">邀请我的问题</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
                 </ul>
             </div>
-    </div>
+
+
+        </div>
 
     </div>
     <div class="container" style="height: 30px">
