完善消息通知显示

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -645,10 +645,10 @@
                         <a class="list-group-a" th:href="${'/user/' + user.userId}">动态</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/questions'}">关注的问题</a>
+                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/questions#question'}">关注的问题</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/topic'}">关注的话题</a>
+                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/topic#topic'}">关注的话题</a>
                     </li>
                     <li class="list-group-item">最新回复</li>
                     <li class="list-group-item">邀请我的问题</li>
