--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -95,19 +95,24 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col">
-                                    <span th:if="${notification.getType() == 6 || notification.getType() == 8}">管理员</span>
-                                    <span th:if="${notification.getType() == 7 || notification.getType() == 9}">由于管理员</span>
-                                    <a th:href="${'/user/'+notification.notifierId}"><span th:text="${notification.notifierName}"></span></a>
-                                    <span class="ml-2" th:text="${notification.getTypeName()}"></span>
-                                    <a class="ml-2" th:href="${'/message/' + user.getUserId() +'/' + notification.getId()}"><span th:text="${notification.getOuterTitle()}"></span></a>
+                                    <div>
+                                        <span th:if="${notification.getType() == 6 || notification.getType() == 8}">管理员</span>
+                                        <span th:if="${notification.getType() == 7 || notification.getType() == 9}">由于管理员</span>
+                                        <a th:href="${'/user/'+notification.notifierId}"><span th:text="${notification.notifierName}"></span></a>
+                                        <span class="ml-2" th:text="${notification.getTypeName()}"></span>
+                                        <a class="ml-2" th:href="${'/message/' + user.getUserId() +'/' + notification.getId()}"><span th:text="${notification.getOuterTitle()}"></span></a>
 <!--                                    <span th:if="${notification.getType()==2}" class="ml-2">下的评论</span>-->
+                                        <span th:if="${notification.getType() == 6}">如有疑问或需要恢复，请联系管理员！</span>
+                                        <span th:if="${notification.getType() == 7}">导致了你的评论被牵连删除，如有疑问或需要恢复，请联系管理员！</span>
+                                        <span th:if="${notification.getType() == 9}">因此你的评论也被恢复！如有疑问，请联系管理员！</span>
+                                        <span class="badge badge-warning" th:if="${notification.getStatus()==0}">未读</span>
+                                    </div>
+                                    <a th:if="${notification.getCommentContent()!=''}" th:href="${'/message/' + user.getUserId() +'/' + notification.getId()}">
+                                        <p style="padding-top: 10px; color: #989898; font-weight: bolder;"  th:text="${notification.getCommentContent()}"></p>
+                                    </a>
 
-                                    <span th:if="${notification.getType() == 6}">如有疑问或需要恢复，请联系管理员！</span>
-                                    <span th:if="${notification.getType() == 7}">导致了你的评论被牵连删除，如有疑问或需要恢复，请联系管理员！</span>
-                                    <span th:if="${notification.getType() == 9}">因此你的评论也被恢复！如有疑问，请联系管理员！</span>
-                                    <span class="badge badge-warning" th:if="${notification.getStatus()==0}">未读</span>
                                 </div>
-                            </div>
+                                </div>
                             <div class="row">
                                 <div class="col text-right">
                                     <p th:text="${notification.getCreateTime()}"></p>
@@ -215,10 +220,10 @@
                         <a class="list-group-a" th:href="${'/user/' + user.userId}">动态</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/questions'}">关注的问题</a>
+                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/questions#question'}">关注的问题</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/topic'}">关注的话题</a>
+                        <a class="list-group-a" th:href="${'/user/' + user.userId + '/following/topic#topic'}">关注的话题</a>
                     </li>
                     <li class="list-group-item">最新回复</li>
                     <li class="list-group-item">邀请我的问题</li>
