📧添加广告投放功能

--- a/src/main/resources/templates/admin/controller.html
+++ b/src/main/resources/templates/admin/controller.html
@@ -205,14 +205,10 @@
                                 其他设置
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="pills-advertisement-tab" data-toggle="pill" href="#pills-advertisement" role="tab" aria-controls="pills-advertisement" aria-selected="false">
-                                广告投放
-                            </a>
-                        </li>
                     </ul>
                     <hr/>
                     <div class="tab-content" id="pills-tabContent">
+<!--                        置顶问题-->
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                             <div class="row">
                                 <div class="col">
@@ -262,9 +258,11 @@
 
 
                         </div>
+<!--                        系统设置-->
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                             即将上线
                         </div>
+<!--                        其它设置-->
                         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
                             <div class="row ml-2">
                                 <button type="button" class="btn btn-primary" onclick="updateHotUser()">立即重新计算热门用户</button>
@@ -275,9 +273,6 @@
                             <div class="container" style="height: 30px">
 
                             </div>
-                        </div>
-                        <div class="tab-pane fade" id="pills-advertisement" role="tabpanel" aria-labelledby="pills-advertisement-tab">
-                            即将上线
                         </div>
                     </div>
                 </div>
