--- a/src/main/resources/templates/admin/question.html
+++ b/src/main/resources/templates/admin/question.html
@@ -93,8 +93,8 @@
                         <i class="ni ni-tv-2 text-primary"></i> 主页
                     </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/admin/question">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admin/question">
                         <i class="ni ni-bullet-list-67 text-red"></i> 问题信息
                     </a>
                 </li>
@@ -111,6 +111,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/admin/controller">
                         <i class="ni ni-key-25 text-info"></i> 社区设置
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/advertisement">
+                        <i class="ni ni-bullet-list-67 text-red"></i> 广告设置
                     </a>
                 </li>
             </ul>
