--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -98,8 +98,8 @@
                         <i class="ni ni-bullet-list-67 text-red"></i> 问题信息
                     </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/admin/user">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admin/user">
                         <i class="ni ni-single-02 text-yellow"></i> 用户信息
                     </a>
                 </li>
@@ -111,6 +111,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/admin/controller">
                         <i class="ni ni-key-25 text-info"></i> 社区设置
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/advertisement">
+                        <i class="ni ni-bullet-list-67 text-red"></i> 广告设置
                     </a>
                 </li>
             </ul>
