--- a/src/main/resources/templates/admin/search.html
+++ b/src/main/resources/templates/admin/search.html
@@ -103,14 +103,19 @@
                         <i class="ni ni-single-02 text-yellow"></i> 用户信息
                     </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/admin/search">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admin/search">
                         <i class="ni ni-planet text-blue"></i> 搜索
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/admin/controller">
                         <i class="ni ni-key-25 text-info"></i> 社区设置
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/advertisement">
+                        <i class="ni ni-bullet-list-67 text-red"></i> 广告设置
                     </a>
                 </li>
             </ul>
